--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="email">E-mail</string>
     <string name="salvar_aluno">Salvar o aluno</string>
     <string name="remover">Remover</string>
+    <string name="sobrenome">Sobrenome</string>
+    <string name="endereco">Endereço</string>
 </resources>
